Refactor JavaFX plugin and sample project configuration